# myntist-beacon

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  RUNBOOKS.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
infra/: buildspec.yml  cloudformation.yml  deploy.sh
myntist-beacon/: .env.example  Dockerfile.api  Makefile  conftest.py  docker-compose.yml  requirements.txt
myntist-beacon/.github/workflows/: autoheal_detect.yml  deploy.yml  schema_validate.yml  score.yml
myntist-beacon/beacon_core/dns/: dnssec_verifier.py  godaddy_updater.py  route53_updater.py
myntist-beacon/beacon_core/hsce/: interface_contract.py
myntist-beacon/beacon_core/signing/: ed25519_signer.py  field_signing_keys.py  key_publisher.py  kms_signer.py
myntist-beacon/beacon_core/telemetry/: financial_engine.py  financial_validator.py  survivability_engine.py  telemetry_exporter.py
myntist-beacon/dashboard/: index.html  package.json  tailwind.config.js  vite.config.js
myntist-beacon/dashboard/src/: App.jsx  index.css
myntist-beacon/kcp/: continuity_verifier.py  key_state.py  rotation_handler.py
myntist-beacon/monitoring/: cloudwatch_config.json
myntist-beacon/scripts/: demo.py  phase2_seed.py  seed.py  write_audit_entry.py
myntist-beacon/tests/: test_financial_engine.py  test_financial_validator.py  test_hmac_handler.py  test_hsce_interface.py  test_kcp.py  test_policy_engine.py  test_rfc002_compliance.py  test_role_decay.py  test_substrate_api.py  test_survivability_engine.py  test_telemetry_exporter.py
scripts/: start-production.sh
(+36 files in other folders)
