[project]
name = "myntist-beacon"
version = "2.0.0"
description = "Myntist Sovereign Beacon — sovereign-grade telemetry, IAM, and signed status feed"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "boto3>=1.42.86",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pygithub>=2.9.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
